Lots of changes here too. Fixing the logo, it now works on mobile and is padded well. The ladder is now on the main page.

--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -56,3 +56,9 @@ div.centered2 table {
   margin: 0 auto;
   text-align: left;
 }
+
+div.centered-max-width {
+  text-align: center;
+  padding: 5px;
+  max-width: auto;
+}
